# -*- coding:utf-8-unix -*-

[package]
name = "library"
version = "0.1.0"
authors = ["spihill"]
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bundle"
path = "src/bundle/main.rs"

[[bin]]
name = "disjoint_sparse_table"
path = "verify/yosupo/disjoint_sparse_table.test.rs"
problem = ""

[[bin]]
name = "disjoint_sparse_table_sum"
path = "verify/yosupo/disjoint_sparse_table_sum.test.rs"

[[bin]]
name = "diameter"
path = "verify/yosupo/diameter.test.rs"

[[bin]]
name = "segment_tree_composite"
path = "verify/yosupo/segment_tree_composite.test.rs"

[[bin]]
name = "dynamic_segment_tree_composite"
path = "verify/yosupo/dynamic_segment_tree_composite.test.rs"